gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail23181.d
version https://git-lfs.github.com/spec/v1
oid sha256:28e3aa63b8b82d6d6a387d182a86664bc7f88e31254fa1425abdafc0bf667851
size 613
